<resources>
    <string name="app_name">StylishAdmin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="total_price">Total price</string>
    <string name="order_1234">Order #1234</string>
    <string name="total_price_value">100$</string>
    <string name="adidas">Adidas</string>
    <string name="manage_brands">Manage Brands</string>
    <string name="address">43, Electronics City Phase 1, \nElectronic City\n</string>
    <string name="item_in_order_name">items</string>
    <string name="men_s_print">"Men\\'s Printed Pullover Hoodie   "</string>
    <string name="add_to_items">Add to items</string>
    <string name="sizes_stock"><![CDATA[Sizes & Stock]]></string>
    <string name="enter_the_name">Enter the name</string>
    <string-array name="segmented_items">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>

</resources>